--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.6+7
+version: 1.0.8+11
 
 environment:
   sdk: ^3.7.0
@@ -47,6 +47,7 @@ dependencies:
   location: ^7.0.0
   flutter_dotenv: ^5.2.1
   flutter_launcher_icons: ^0.14.3
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
